# MoySklad-python-SDK

./: .gitignore  AI.md  README.md  integration_test.py  pyproject.toml
moysklad/: __init__.py
moysklad/api/: base.py
moysklad/api/async_task/: __init__.py
moysklad/api/audit/: __init__.py
moysklad/api/bonus_program/: __init__.py
moysklad/api/context/: __init__.py
moysklad/api/document/: __init__.py
moysklad/api/entity/: __init__.py
moysklad/api/report/: __init__.py
moysklad/api/retail/: __init__.py
moysklad/api/trash/: __init__.py
moysklad/api/webhook/: __init__.py
moysklad/client/: async_client.py  base.py  exceptions.py  sync_client.py
moysklad/models/: base.py
moysklad/models/async_task/: task.py
moysklad/models/audit/: event.py
moysklad/models/bonus_program/: program.py  transaction.py
moysklad/models/context/: models.py
moysklad/models/document/: cashin.py  cashout.py  commissionreportin.py  commissionreportout.py  customerorder.py  demand.py  enter.py  facturein.py  factureout.py  internalorder.py  inventory.py  invoicein.py  invoiceout.py  loss.py  move.py  paymentin.py  paymentout.py  prepayment.py  prepaymentreturn.py  pricelist.py  processing.py  processingorder.py  processingplan.py  purchaseorder.py  purchasereturn.py  retaildrawercashin.py  retaildrawercashout.py  retailsalesreturn.py  salesreturn.py  supply.py
moysklad/models/entity/: assortment.py  bonustransaction.py  (+23 more)
moysklad/utils/: filters.py
tests/: test_async_client.py  test_document.py  test_filters.py  test_pagination.py  test_rate_limit.py  test_write_ops.py
(+9 files in other folders)
