[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moysklad"
version = "0.1.0"
description = "Async/Sync Python client for MoySklad API 1.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
include = ["moysklad*"]
